# silver-town-robot-service

./: .gitignore  .rmf_schedule_node.yaml  pinky_fleet_adapter.py  robot_client_api.py  robot_command_client.py
AI_ws/: aiServer.py  gestureController.py  requirements.txt
AI_ws/aicore/: gestureRecognizer.py  targetTracker.py
AI_ws/control/: AIController.py  comm.py  stateContoller.py  visualizer.py
docs/: jetcobot_moveit_fastcdr_troubleshooting.md  open_rmf_task_api_guide.md  open_rmf_workflow_task_python_usage.md  pinky_drive_state_diagram.md  prd.md  rmf_jetcobot_workcell_interface.md  rmf_pinky_drive_interface.md
jetcobot_ws/src/jetcobot_description/: CMakeLists.txt  package.xml
jetcobot_ws/src/jetcobot_description/config/: jetcobot.rviz
jetcobot_ws/src/jetcobot_description/launch/: display.launch.py
jetcobot_ws/src/jetcobot_description/urdf/: jetcobot.urdf
jetcobot_ws/src/jetcobot_description/urdf/adaptive_gripper/: mycobot_adaptive_gripper.urdf  mycobot_adaptive_gripper.xacro
jetcobot_ws/src/jetcobot_description/urdf/mycobot_280_jn/: mycobot_280_jn.urdf  mycobot_280_jn_adaptive_gripper.urdf
jetcobot_ws/src/jetcobot_driver/: README.md  package.xml  setup.cfg  setup.py
jetcobot_ws/src/jetcobot_driver/config/: arm_manager.yaml
jetcobot_ws/src/jetcobot_driver/jetcobot_driver/: arm_manager_node.py  trajectory_action_server.py
jetcobot_ws/src/jetcobot_driver/launch/: pi_bringup.launch.py
jetcobot_ws/src/jetcobot_driver/test/: test_arm_manager_config.py
jetcobot_ws/src/jetcobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
jetcobot_ws/src/jetcobot_moveit_config/config/: initial_positions.yaml  jetcobot.ros2_control.xacro  jetcobot.srdf  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
jetcobot_ws/src/jetcobot_moveit_config/launch/: laptop.launch.py
jetcobot_ws/src/jetcobot_workcell_msgs/: CMakeLists.txt  package.xml
jetcobot_ws/src/jetcobot_workcell_msgs/msg/: WorkcellCommand.msg  WorkcellState.msg
pinky_drive_ws/: README.md
pinky_drive_ws/src/pinky_drive_manager/: package.xml  setup.cfg  setup.py
pinky_drive_ws/src/pinky_drive_manager/config/: pinky_drive_manager.yaml
pinky_drive_ws/src/pinky_drive_manager/launch/: drive_manager.launch.py  multi_drive_manager.launch.py
pinky_drive_ws/src/pinky_drive_manager/pinky_drive_manager/: drive_manager_node.py
pinky_drive_ws/src/pinky_drive_msgs/: CMakeLists.txt  package.xml
pinky_drive_ws/src/pinky_drive_msgs/action/: Navigate.action
pinky_drive_ws/src/pinky_drive_msgs/msg/: DriveCommand.msg  DriveState.msg
pinky_drive_ws/src/pinky_drive_msgs/srv/: Stop.srv
pinky_drive_ws/src/pinky_follow/pinky_follower/: setup.cfg  setup.py
pinky_drive_ws/src/pinky_follow/pinky_follower/pinky_follower/: follower.py
pinky_drive_ws/src/pinky_follower/: package.xml  setup.py
pinky_drive_ws/src/pinky_follower/pinky_follower/: followController.py  followerNode.py  loggerMixin.py  msgHandler.py  udpReceiver.py
rmf_ws/: README.md
rmf_ws/src/pinky_rmf_adapter/: package.xml  setup.cfg  setup.py
rmf_ws/src/pinky_rmf_adapter/config/: pinky1_domain_bridge.yaml  pinky2_domain_bridge.yaml  pinky_adapter.yaml
rmf_ws/src/pinky_rmf_adapter/launch/: pinky_domain_bridges.launch.py  pinky_fleet_adapter.launch.py
rmf_ws/src/pinky_rmf_adapter/pinky_rmf_adapter/: RobotClientAPI.py  pinky_fleet_adapter.py  pinky_task_orchestrator.py
rmf_ws/src/pinky_rmf_bringup/: CMakeLists.txt  package.xml
rmf_ws/src/pinky_rmf_bringup/launch/: pinky_rmf.launch.py  rmf_core.launch.py
rmf_ws/src/pinky_rmf_maps/: CMakeLists.txt  package.xml
rmf_ws/src/pinky_rmf_maps/maps/: rmf-test.building.yaml
rmf_ws/src/pinky_task_msgs/: CMakeLists.txt  package.xml
rmf_ws/src/pinky_task_msgs/srv/: CancelFollow.srv  TableCall.srv
rmf_ws/src/pinky_task_orchestrator/: package.xml  setup.cfg  setup.py
rmf_ws/src/pinky_task_orchestrator/config/: task_orchestrator.yaml
rmf_ws/src/pinky_task_orchestrator/launch/: task_orchestrator.launch.py
rmf_ws/src/pinky_task_orchestrator/pinky_task_orchestrator/: pinky_task_orchestrator.py  states.py  task_orchestrator_node.py
rmf_ws/src/pinky_task_orchestrator/resource/: pinky_task_orchestrator
rmf_ws/src/rmf_bringup/: CMakeLists.txt  package.xml
rmf_ws/src/rmf_bringup/launch/: rmf.launch.py  rmf_core.launch.py
rmf_ws/src/rmf_maps/: CMakeLists.txt  package.xml
rmf_ws/src/rmf_maps/nav_graphs/: 0.yaml
rmf_ws/src/site_config/: package.xml  setup.cfg  setup.py
rmf_ws/src/site_config/config/: rmf_test.site.yaml  site.template.yaml
rmf_ws/src/site_config/site_config/: generate_configs.py
rmf_ws/src/task_msgs/: CMakeLists.txt  package.xml
rmf_ws/src/task_msgs/srv/: FollowCall.srv
rmf_ws/src/task_orchestrator/: package.xml  setup.cfg  setup.py
rmf_ws/src/task_orchestrator/config/: task_orchestrator.yaml
rmf_ws/src/task_orchestrator/launch/: task_orchestrator.launch.py
rmf_ws/src/task_orchestrator/resource/: task_orchestrator
rmf_ws/src/task_orchestrator/task_orchestrator/: task_orchestrator.py
