<?xml version="1.0"?>
<package format="3">
  <name>jetcobot_workcell_msgs</name>
  <version>0.0.0</version>
  <description>Workcell command and state interfaces for JetCobot arms.</description>
  <maintainer email="ane@example.com">ane</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
