<?xml version="1.0"?>
<package format="3">
  <name>site_config</name>
  <version>0.1.0</version>
  <description>Single source-of-truth site configuration for Pinky RMF deployment.</description>
  <maintainer email="ane@example.com">ane</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
